--- a/css/default.css
+++ b/css/default.css
@@ -1,10 +1,20 @@
 body {
-    margin: 3rem;
+    max-width: 112rem;
+    margin: auto;
+}
+
+main {
+    padding: 2rem;
+    height: calc(100% - 2rem);
 }
 
 footer {
     position : fixed;
     bottom: 0px;
+    background-color: rgb(196, 195, 236);
+    width: 100%;
+    height: 3rem;
+    padding-left: 3rem;
 }
 
 iframe {
